--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/OrdenCompraProductoDTO.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/OrdenCompraProductoDTO.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MVC.Presentacion.Models.OrdenCompra.OrdenCompraProductoDTO
 <tr>
-    <td>@Model.TipoProducto</td>
+    <td>@Model.IdTipoProducto</td>
     <td>@Model.Producto</td>
     <td>@Model.CantidadAComprar</td>
     <td>@Model.UnidadMedida</td>
